--- a/helloWorld/helloWorld/MainPage.xaml
+++ b/helloWorld/helloWorld/MainPage.xaml
@@ -7,8 +7,12 @@
     <StackLayout Spacing="10" VerticalOptions="Center" HorizontalOptions="Center">
         <Label Text="CPSC - 4910 - SQ"/>
         <Label Text="Student - Jia Hui Li(Benson)" />
-        <Label Text="Date/Time - 3/29, 10 pm" />
+        <Label Text="Date/Time - 4/3, 8 pm" />
         <Label Text="Code Review - Benson Li" />
+
+        <Button x:Name="ListPage"
+                Text="Start"
+                Clicked="OnbtnListPage"/>
     </StackLayout>
 
 </ContentPage>
