--- a/helloWorld/helloWorld/BattlePage.xaml
+++ b/helloWorld/helloWorld/BattlePage.xaml
@@ -3,5 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="helloWorld.BattlePage">
     <StackLayout Spacing="10" VerticalOptions="Center" HorizontalOptions="Center">
+        <Label Text="Runs the battle sequences"/>
     </StackLayout>
 </ContentPage>
